--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -24,7 +24,7 @@ server {
     gzip_proxied any;
     gzip_comp_level 6;
     gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json application/javascript application/xml+rss image/svg+xml;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/json application/javascript application/xml+rss image/svg+xml;
     gzip_disable "msie6";
 
     # Headers de sécurité
